13.5.1-SNAPSHOT - TOML v1.1 (#22)
- Set version to 13.5.1
- Restore JDK8 class format